homework/8.2/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: httpserver
  name: httpsvc
  spec:
    port:
      - port: 80
        protocol: TCP
        targetPort: 8080
    selector:
      app: httpserver
    type:LoadBalance
