homework/8.2/http_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpserver-80
spec:  
	ingressClassName: nginx  
	rules:    
		- host: mod8.51.cafe      
		http:        
			paths:          
				- backend:              
					service:                
					name: httpsvc                
					port:                  
						number: 80            
						path: /            
						pathType: Prefix
